--- a/playbooks/nodes.yml
+++ b/playbooks/nodes.yml
@@ -3,6 +3,6 @@
   pre_tasks:
     - set_fact:
         cname: "{{ inventory_hostname.split('.')[0] }}"
-  
   roles:
     - role: ../roles/install_hashicorp
+    - role: ../roles/join_consul_cluster
