--- a/roles/hacks/tasks/main.yml
+++ b/roles/hacks/tasks/main.yml
@@ -1,5 +1,7 @@
+- name: get consul IPs
+  shell: ip addr show ens10 | awk '$1 == "inet" {gsub(/\/.*$/, "", $2); print $2}'
+  register: ip
 
-- name: create config and data dir
+- name: printtheip
   debug:
-    msg: "{{ cname }}"
-  
+    msg: "{{ ip.stdout }}"
