--- a/roles/install_hashicorp/tasks/main.yml
+++ b/roles/install_hashicorp/tasks/main.yml
@@ -26,23 +26,17 @@
     - /opt/data/consul
     - /opt/data/nomad
 
-- name: consul.service
+- name: consul.service (server)
   become: true
   template:
-    src: ../files/consul.service
+    src: ../files/consul_server.service
     dest: /opt/config/consul/consul.service
     owner: "{{ fupas_user }}"
     group: "{{ fupas_user }}"
     mode: '644'
+  when: "'control_plane' in group_names"
 
-- name: consul.service link
-  become: true
-  file:
-    src: /opt/config/consul/consul.service
-    dest: /etc/systemd/system/consul.service
-    state: link
-
-- name: consul_server.hcl
+- name: consul.hcl (server)
   become: true
   template:
     src: ../files/consul_server.hcl
@@ -52,7 +46,17 @@
     mode: '644'
   when: "'control_plane' in group_names"
 
-- name: consul_client.hcl
+- name: consul.service (client)
+  become: true
+  template:
+    src: ../files/consul_client.service
+    dest: /opt/config/consul/consul.service
+    owner: "{{ fupas_user }}"
+    group: "{{ fupas_user }}"
+    mode: '644'
+  when: "'control_plane' not in group_names"
+
+- name: consul.hcl (client)
   become: true
   template:
     src: ../files/consul_client.hcl
@@ -62,7 +66,14 @@
     mode: '644'
   when: "'control_plane' not in group_names"
 
-- name: enable consule.service
+- name: consul.service link
+  become: true
+  file:
+    src: /opt/config/consul/consul.service
+    dest: /etc/systemd/system/consul.service
+    state: link
+
+- name: enable consul.service
   become: true
   shell: >
         systemctl daemon-reload
