--- a/playbooks/nodes.yml
+++ b/playbooks/nodes.yml
@@ -5,4 +5,5 @@
         cname: "{{ inventory_hostname.split('.')[0] }}"
   roles:
     - role: ../roles/install_hashicorp
+    - role: ../roles/config_consul
     - role: ../roles/join_consul_cluster
