--- a/roles/config_consul/tasks/main.yml
+++ b/roles/config_consul/tasks/main.yml
@@ -3,14 +3,14 @@
   shell: systemctl stop consul
   ignore_errors: yes
   
-- name: consul.service (server)
+- name: consul.start (server)
   become: true
   template:
-    src: ../files/consul_server.service
-    dest: /opt/config/consul/consul.service
+    src: ../files/start_server
+    dest: /opt/config/consul/start
     owner: "{{ fupas_user }}"
     group: "{{ fupas_user }}"
-    mode: '644'
+    mode: 'u=rwx,g=r,o=r'
   when: "'control_plane' in group_names"
 
 - name: consul.hcl (server)
@@ -23,14 +23,14 @@
     mode: '644'
   when: "'control_plane' in group_names"
 
-- name: consul.service (client)
+- name: consul.start (client)
   become: true
   template:
-    src: ../files/consul_client.service
-    dest: /opt/config/consul/consul.service
+    src: ../files/start_client
+    dest: /opt/config/consul/start
     owner: "{{ fupas_user }}"
     group: "{{ fupas_user }}"
-    mode: '644'
+    mode: 'u=rwx,g=r,o=r'
   when: "'control_plane' not in group_names"
 
 - name: consul.hcl (client)
@@ -43,6 +43,15 @@
     mode: '644'
   when: "'control_plane' not in group_names"
 
+- name: consul.service
+  become: true
+  template:
+    src: ../files/consul.service
+    dest: /opt/config/consul/consul.service
+    owner: "{{ fupas_user }}"
+    group: "{{ fupas_user }}"
+    mode: '644'
+  
 - name: consul.service link
   become: true
   file:
