--- a/roles/prepare_vm/tasks/main.yml
+++ b/roles/prepare_vm/tasks/main.yml
@@ -1,14 +1,15 @@
 
-- name: install epel
-  become: true
-  yum:
-    name: "epel-release"
-    state: present
+#- name: install epel
+#  become: true
+#  yum:
+#    name: "epel-release"
+#    state: present
 
 - name: install additional packages
   become: true
   yum:
     name: "{{ packages }}"
+    enablerepo: 'epel-release'
     state: present
   vars:
     packages:
