refactored playbooks, working on the caddy/podman issue

--- a/inventory/inventory.example.yml
+++ b/inventory/inventory.example.yml
@@ -6,17 +6,21 @@ all:
     c1.example.com:
   
   vars:
+    # generic infrastructure setting
     fupas_user: fupa
+    dc_name: fupas
     # network configuration
-    vpc: 10.1.0.0/16
-    vpc_if: ens10
-    vpc_name: fupas
+    subnet: 10.1.0.0/16
+    podman_subnet: 10.88.0.0/16
     # consul
     consul_server_count: 1
     consul_server_ip: 10.1.0.2
     consul_server_extra_params: "-bind=0.0.0.0 -bootstrap-expect=1 -retry-join '10.1.0.2' -enable-local-script-checks"
     consul_client_extra_params: "-retry-join '10.1.0.2'"
-
+    # container images
+    ingrsvc_image: eu.gcr.io/fupas-cr/ingrsvc
+    ingrsvc_version: latest
+    
     # ansible configuration
     ansible_user: fupa
     ansible_ssh_private_key_file: ~/.ssh/id_rsa
