--- a/roles/config_consul/files/consul.service
+++ b/roles/config_consul/files/consul.service
@@ -7,8 +7,8 @@ ConditionFileNotEmpty=/opt/config/consul/consul.hcl
 
 [Service]
 Type=exec
-User=fupa
-Group=fupa
+User={{ fupas_user }}
+Group={{ fupas_user }}
 ExecStart=/opt/config/consul/start
 ExecReload=/usr/bin/consul reload
 ExecStop=/usr/bin/consul leave
